--- a/pages/login.html
+++ b/pages/login.html
@@ -17,7 +17,7 @@
             <input type="text">
         </form><br>
         <button>Login</button><br>
-        <a href="pages/reset.html">Forgotten password?</a><br>
+        <a href="reset.html">Forgotten password?</a><br>
 
         <p>Don't have an account?</p> <a href="../index.html"><button>Register now</button></a>
 
